generated/nixidy/prod/atuin/HTTPRoute-atuin.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: atuin
  name: atuin
  namespace: dotfiles
spec:
  hostnames:
    - atuin.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: atuin
          namespace: dotfiles
          port: 8888
          weight: 1
